# status-prompt

./: .gitignore  READme.md  compile.bash  password.txt  runme.bash  runme.sh
src/sample_format/: keys.txt
src/tui/: CMakeLists.txt  build.sh  keys_parser.c  keys_parser.h  tui_renderer.c
